# XCore-discord-bot

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: canary-rollout.md
src/xcore_discord_bot/: badges.py  bot.py  client_protocols.py  contracts.py  dto.py  handlers_badges.py  handlers_linking.py  handlers_misc.py  handlers_moderation.py  main.py  modal_factories.py  moderation_modals.py  moderation_views.py  mongo_store.py  permissions.py  presentation.py  protocol_compat.py  protocol_outbound.py  redis_bus.py  registry.py  retry.py  runtime_consumers.py  server_views.py  service_protocols.py  settings.py  store_mappers.py  ui_helpers.py
tests/: test_admin_request_view.py  test_badges_autocomplete.py  test_bans_dto.py  test_bot_admin_confirm_idempotency.py  test_bot_admin_reconcile.py  test_bot_helpers.py  test_bot_upload_map.py  test_chat_bridge.py  test_contracts.py  test_contracts_admin_access.py  test_format.py  test_handlers_admin_access.py  test_handlers_badges.py  test_handlers_linking.py  test_handlers_misc_maps.py  test_handlers_moderation_reset_password.py  test_maps_autocomplete.py  test_moderation_log_mentions.py  test_moderation_views_extra.py  test_mongo_models.py  test_mute_persistence_consistency.py  test_mute_undo_view.py  test_permissions_checks.py  test_player_sync_events.py  test_presence.py  test_presentation_extra.py  test_protocol_outbound.py  test_redis_bus_admin_access.py  test_redis_bus_consumers.py  test_redis_bus_idempotency.py  test_redis_bus_rpc_maps.py  test_registry.py  test_retry.py  test_runtime_consumers.py  test_search_players_dto.py  test_settings.py  test_stats_actions.py  test_store_mappers.py  test_unban_unmute_embeds.py
(+7 files in other folders)
