[project]
name = "xcore-discord-bot"
version = "0.1.0"
description = "Standalone Discord bot for XCore Redis transport"
readme = "README.md"
authors = [
    { name = "osp54", email = "76648940+osp54@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0",
    "motor>=3.7.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "tenacity>=9.1.2",
    "xcore-protocol",
]

[project.scripts]
xcore-discord-bot = "xcore_discord_bot.main:main"

[dependency-groups]
dev = [
    "fakeredis>=2.31.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
xcore-protocol = { path = "../xcore-protocol", editable = true }
